welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: not found: value w
  w = getMondeHauteur()
  ^Array2:5: error: not found: value w
  for (i<-0 to w()-2){
               ^