welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var T : Array[Color] = new Array[Color](getMondeHauteur())
  w = getMondeHauteur()
  for (i<-0 to w()-2){
    T(i)=getCouleurSol();
    avance();
  }
  
}